--- a/DIYX.Music.Youtube/DIYX.Music.Youtube.csproj
+++ b/DIYX.Music.Youtube/DIYX.Music.Youtube.csproj
@@ -63,6 +63,11 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MainController.cs" />
+    <Compile Include="YoutubeDialog.xaml.cs">
+      <DependentUpon>YoutubeDialog.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="YoutubeController.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -75,6 +80,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="YoutubeDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
